<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StochActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_stoch_params"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:textColor="@color/colorPaleBlue"
        android:fontFamily="cursive"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:text="@string/activity_stoch_lambda"
        android:textSize="50dp"
        android:textColor="@color/colorPaleBlue"
        android:onClick="onClickLambda"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/activity_stoch_lambda"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="85dp"
        android:textSize="30dp"
        android:textColor="@color/colorPaleBlue"
        android:backgroundTint="@color/colorPaleBlue"
        android:maxWidth="75dp"
        android:maxLines="1"
        />

    <Spinner
        android:id="@+id/activity_stoch_lambda_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="135dp"
        android:backgroundTint="@color/colorPaleBlue" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:layout_marginLeft="20dp"
        android:text="@string/activity_stoch_mu"
        android:textSize="50dp"
        android:textColor="@color/colorPaleBlue"
        android:onClick="onClickMu"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/activity_stoch_mu"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="85dp"
        android:textSize="30dp"
        android:textColor="@color/colorPaleBlue"
        android:backgroundTint="@color/colorPaleBlue"
        android:maxWidth="75dp"
        android:maxLines="1"
        />

    <Spinner
        android:id="@+id/activity_stoch_mu_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/colorPaleBlue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="20dp"
        android:text="@string/activity_stoch_s"
        android:textSize="50dp"
        android:textColor="@color/colorPaleBlue"
        android:onClick="onClickS"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/activity_stoch_s"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="85dp"
        android:text="1"
        android:textSize="30dp"
        android:textColor="@color/colorPaleBlue"
        android:backgroundTint="@color/colorPaleBlue"
        android:maxLines="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="20dp"
        android:text="@string/activity_stoch_K"
        android:textSize="50dp"
        android:textColor="@color/colorPaleBlue"
        android:onClick="onClickK"
        android:clickable="true"
        />

    <EditText
        android:id="@+id/activity_stoch_K"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="335dp"
        android:layout_marginLeft="85dp"
        android:text="0"
        android:textSize="30dp"
        android:textColor="@color/colorPaleBlue"
        android:backgroundTint="@color/colorPaleBlue"
        android:maxLines="1"
        />

    <ImageButton
        android:id="@+id/activity_stoch_compute_compute"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/activity_stoch_gears"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:text="@string/activity_stoch_compute"
        android:textSize="35dp"
        android:textColor="@color/colorPaleBlue"
        android:fontFamily="cursive"
        />


</FrameLayout>